# internal/routers/api/upload.go
@@ -16,6 +16,14 @@ import (
 	"myBlog/pkg/upload"
 )
 
+// @Summary  文件上传
+// @Produce  json
+// @Param  file body string true "文件"
+// @Param  type body string true "类型"
+// @Success  200 {object} app.Response "成功"
+// @Failure  400 {object} errcode.Error "请求错误"
+// @Failure  500 {object} errcode.Error "内部错误"
+// @Router  /upload/file [post]
 func Upload(c *gin.Context) {
 	response := app.NewResponse(c)
 	file, fileHeader, err := c.Request.FormFile("file")
